[package]
name = "vrf-rarity"
version = "0.1.0"
description = "MagicBlock VRF rarity roller for Tribes game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_rarity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-vrf-sdk = { version = "0.2", features = ["anchor"] }
